--- a/BlueEngine/BlueEngine/Sandbox/Sandbox.vcxproj
+++ b/BlueEngine/BlueEngine/Sandbox/Sandbox.vcxproj
@@ -156,6 +156,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Source\Private\NavMesh\NavMeshGenerator.cpp" />
     <ClCompile Include="Source\Private\main.cpp" />
     <ClCompile Include="Source\Private\SandboxApplication.cpp" />
   </ItemGroup>
@@ -165,6 +166,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Source\Public\NavMesh\NavMeshGenerator.h" />
     <ClInclude Include="Source\Public\SandboxApplication.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
