--- a/BlueEngine/BlueEngine/Sandbox/Sandbox.vcxproj.filters
+++ b/BlueEngine/BlueEngine/Sandbox/Sandbox.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="Source\Private\SandboxApplication.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source\Private\NavMesh\NavMeshGenerator.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Public\SandboxApplication.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Public\NavMesh\NavMeshGenerator.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
